# NetSpeed

./: PRODUCTION_DEPLOYMENT.md  PROJECT_DOCUMENTATION.md  README.md  SOCIAL_MEDIA_POST.md
.github/workflows/: deploy-frontend.yml
backend/: .dockerignore  Dockerfile  pom.xml
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: index.css
frontend/src/components/: Dashboard.jsx  Download.jsx  Features.jsx  Footer.jsx  FutureUpdates.jsx  Hero.jsx  LiveStats.jsx  Navbar.jsx  Preview.jsx  Trust.jsx  VersionHistory.jsx
frontend/src/data/: versions.json
frontend/src/pages/: Home.jsx
frontend/src/services/: api.js
net-speed/: .gitignore  CMakeLists.txt  README.md  publish.ps1
net-speed/docs/: APP_DOCUMENTATION.md  BUILD_AND_PACKAGING.md  WEBSITE_DISTRIBUTION.md
net-speed/installer/scripts/: build_installer.ps1
net-speed/installer/wix/: installer.wixproj  product.wxs
net-speed/packaging/msix/: AppxManifest.xml
net-speed/packaging/msix/assets/: README.md
net-speed/scripts/: build.ps1  clean.ps1  copy_cpp_project.py  package_portable.ps1  update_startup.py
net-speed/src/: NetSpeedWidget.manifest  main.cpp
net-speed/src/app/: App.cpp  App.h  Window.cpp  Window.h
net-speed/src/core/: Config.cpp  Config.h  Logger.cpp  Logger.h
net-speed/src/monitor/: NetworkMonitor.cpp  NetworkMonitor.h  SpeedCalculator.cpp  SpeedCalculator.h
net-speed/src/ui/: TrayIcon.cpp  TrayIcon.h  WidgetRenderer.cpp  WidgetRenderer.h
net-speed/src/utils/: Formatter.cpp  Formatter.h
scripts/: sync-desktop-release.ps1
(+7 files in other folders)
